--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "js-cookie": "^2.2.1",
     "query-string": "^6.11.1",
     "sirv-cli": "^0.4.4"
   }
