use docker for deployment

--- a/Pipfile
+++ b/Pipfile
@@ -22,3 +22,5 @@ python_version = "3.8"
 dev = "pipenv run uvicorn main:app --reload"
 create-migrations = "pipenv run alembic revision --autogenerate"
 migrate = "pipenv run alembic upgrade head"
+create-image = "docker build . -t clicker:latest -t clicker -t clicker:1.0"
+push-image = "docker image push server.bykovski.de:5000/clicker"
