--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "6379"
   db:
     image: postgres:12.2
+    ports:
+      - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     env_file:
