--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ version: "3.3"
 services:
   redis:
     image: redis:alpine
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    env_file:
+      - ./.redis_env
     ports:
       - "6379"
   db:
