--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: redis:alpine
     env_file:
       - ./.redis_env
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: redis-server --requirepass $REDIS_PASSWORD
     ports:
-      - "6379"
+      - "6379:6379"
   db:
     image: postgres:12.2
     ports:
