--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.3"
 services:
   redis:
     image: redis:alpine
+    volumes:
+      - redis-data:/data
     command: redis-server --requirepass $REDIS_PASSWORD
     ports:
       - "6379:6379"
@@ -25,3 +27,4 @@ services:
 
 volumes:
   db-data:
+  redis-data:
