--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: redis:alpine
     volumes:
       - redis-data:/data
-    command: redis-server --requirepass $REDIS_PASSWORD
+    command: redis-server --appendonly yes --requirepass $REDIS_PASSWORD
     ports:
       - "6379:6379"
   db:
